--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<div>
 			  <div class="intro">
-				<img class="profile-picture"  src="images\image01.jpg" />
+				<img class="profile-picture"  src="Images\image01.jpg" />
 				<h1 class="my-name">Ahmad Rostami </h1>
 				<h2>Development Team Leader @ Behpardakht Mellat</h2> <br><br>
 			  </div>
@@ -92,10 +92,10 @@
 			
 			<h3 class="projects-heading" id="MyId"> <br><br>My Projects are with these banks:</h3>
 			<div class="projects-grid">
-				<img class="project-image" width="100" height="100" src="images\15.jpg" />
-				<img class="project-image" width="100" height="100" src="images\16.jpg" />
-				<img class="project-image" width="100" height="100" src="images\17.jpg" />
-				<img class="project-image" width="100" height="100" src="images\18.jpg" />
+				<img class="project-image" width="100" height="100" src="Images\15.jpg" />
+				<img class="project-image" width="100" height="100" src="Images\16.jpg" />
+				<img class="project-image" width="100" height="100" src="Images\17.jpg" />
+				<img class="project-image" width="100" height="100" src="Images\18.jpg" />
 			</div>
 			<div class="links-and-contactlist">
 				<div class="links">
